# Rewind2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gitignore
src/: main.cpp  qt5.natvis
src/Base/: ComponentCollection.h  ComponentManager.h  ECSManager.h  ECSWorld.h  EntityManager.h  Settings.h  System.h  SystemManager.h
src/Common/: CMakeLists.txt  Log.h
src/Common/Action/: Action.h  ActionCollection.h  ActionManager.h
src/Components/: Boid.h  Camera.h  ComponentHeaders.h  Lifetime.h  MovingParticleData.h  ParticleData.h  RectangleData.h  RenderData.h  Transform.h  Velocity.h
src/ECS/: CMakeLists.txt  CacheManager.h  ComponentCollection.h  ComponentManager.h  ECS.h  ECSSettings.h  EntityManager.h  EntityPair.h  EntityQueue.h  EntitySet.h  Layer.h  System.h  SystemManager.h  TypeList.h
src/Game/: Application.h  CacheManager.h  Game.h  GameSettings.h  RollbackManager.h  World.h  WorldManager.h
src/Game/Input/: Action.h  ActionManager.h  BaseInput.h  Input.cpp  Input.h  InputCollection.h  InputData.h  InputManager.h  InputPackage.h
src/Game/Worlds/: PWorld.h  PhysicsWorld.h  PhysicsWorldData.h
src/Headers/: ComponentArray.h  ComponentManager.h  EntityManager.h  Settings.h  System.h  SystemManager.h
src/Math/: AABB.h  Box.h  CMakeLists.txt  FixedAABB.h  FixedRandom.h  FixedTypes.h  FixedVector2.h  HashUtils.h  IntVector2.h  PartitionGrid.h  PartitionGrid2.h  Quadtree.h  Rect.h  Span.h  Stream.h  TestMath.h  main.cpp
src/Math/FPM/: fixed.hpp  fixed.natvis  ios.hpp  math.hpp
src/Math/FixedLib/: CMakeLists.txt
src/Math/FixedLib/include/fixedmath/: math.h
src/Networking/: Client.cpp  Factory.cpp  IClient.h  IServer.h  Log.h  Server.cpp  Statistics.h
src/Networking/Client/: CMakeLists.txt  Client.h  ClientHandler.h  main.cpp
src/Networking/Server/: CMakeLists.txt  Server.h  UDPServer.h  main.cpp
src/Networking/Shared/: GameDataPacket.h  InputPacket.h  NetworkingSettings.h  Packet.h  Stream.h  ThreadedQueue.h
src/Physics/: CMakeLists.txt  OldPhysicsWorld.h  Physics.h  PhysicsComponents.h  PhysicsSettings.h  PhysicsSystems.h  PhysicsUtils.h  PhysicsWorld.h
src/Physics/Additional/: ColliderType.h  RigidBodyType.h
src/Physics/Cache/: ComponentCollectionCache.h  SortedCache.h  SortedDoubleCache.h  SortedDoubleMap.h  SortedDoubleSet.h  SortedMap.h  SortedMapArray.h  TransformCache.h
src/Physics/Collision/: CollisionCache.h  CollisionCheckInfo.h  CollisionDetection.h  CollisionInfo.h  CollisionPairData.h  CollisionResponseInfo.h  CollisionResponseTable.h  CollisionResponseTable2.h  CollisionResponseTable3.h  CollisionTable.h  CollisionTable2.h  ContactPair.h  ImpulseCache.h  PhysicsCache.h
src/Physics/Components/: BoxCollider.h  CircleCollider.h  ColliderRenderData.h  ColliderTransform.h  Movable.h  PolygonCollider.h  RigidBody.h  RigidBodyData.h  Rigidbody.h  Transform.h  TransformMeta.h
src/Physics/Enums/: HashType.h  HashUpdateType.h
src/Physics/Systems/: BoxColliderRenderer.h  CircleColliderRenderer.h  MovingSystem.h  PolygonColliderRenderer.h  RigidBody.h
src/Rendering/: Camera.h  Shader.h
src/Systems/: BlinkingParticles.h  BoidMovement.h  BoidRenderer.h  CameraSystem.h  Movement.h  MovingParticleRenderer.h  ParticleRenderer.h  RectangleRenderer.h  Renderer.h  SystemHeader.h
